menambahkan handler image error pada home.css, mengcomment sql yang disesuakian dan mengecek result load more

--- a/app/views/admin/bantuan/index.html
+++ b/app/views/admin/bantuan/index.html
@@ -215,7 +215,7 @@
                                         <?= $data_bantuan->total_donasi; ?>
                                     </b>
                                     <div class="badge badge-primary text-orange text-capitalize">
-                                        <?= $data_bantuan->total_donatur; ?> Donasi
+                                        <?= $data_bantuan->total_donatur; ?> Donatur
                                     </div>
                                 </div>
                             </th>
