--- a/public/assets/route/admin/pages/css/buat-donasi.css
+++ b/public/assets/route/admin/pages/css/buat-donasi.css
@@ -44,6 +44,19 @@ textarea {
     display: flex;
 }
 
+/* Select2 for Channel Payment */
+.select2-container.select2-container--default.select2-container--open .select2-results img[alt^="Bank BJB"] {
+    margin-top: -.25rem;
+}
+
+.select2-container.select2-container--default.select2-container--open .select2-results img[alt^="Bank BSI"] {
+    margin-top: -.35rem;
+}
+
+.select2-container.select2-container--default.select2-container--open .select2-results img[alt^="Bank BRI"] {
+    margin-top: .025rem;
+}
+
 .card-body.form .row .col {
     flex-basis: 100%;
 }
@@ -86,5 +99,20 @@ textarea {
 
     .custom-control.custom-checkbox:not(.checked) {
         padding-top: 2.6em;
+    }
+}
+
+@media (min-width: 1200px) {
+    /* Select2 for Channel Payment */
+    .select2-container.select2-container--default.select2-container--open .select2-results img[alt^="Bank BJB"] {
+        margin-top: -.25rem;
+    }
+
+    .select2-container.select2-container--default.select2-container--open .select2-results img[alt^="Bank BSI"] {
+        margin-top: -.35rem;
+    }
+
+    .select2-container.select2-container--default.select2-container--open .select2-results img[alt^="Bank BRI"] {
+        margin-top: -.325rem;
     }
 }
