--- a/public/assets/route/admin/core/css/form-element.css
+++ b/public/assets/route/admin/core/css/form-element.css
@@ -203,6 +203,10 @@ span.selection {
     color: #fff !important;
 }
 
+.select2-results .select2-results__option--highlighted * {
+    color: #fff;
+}
+
 .select2-results ul {
     background-color: var(--primary);
 }
